fix: text-overflow ellipsis

--- a/client/src/components/card-button/file/styles.css
+++ b/client/src/components/card-button/file/styles.css
@@ -81,6 +81,10 @@
   font-weight: 700;
 }
 
+#file_container_item__main__header:hover {
+  cursor: pointer;
+}
+
 .file_container_item__main_mobile {
   display: flex;
   justify-self: flex-end;
